# git-object

./: git-object.cabal
Data/: Git.hs
Data/Git/: Parser.hs  Types.hs
System/: Git.hs
